@@ -1,3 +1,8 @@
+2007-01-24  SIGOURE Benoit  <tsuna@lrde.epita.fr>
+
+	Handle shutdown(2) macros for Windows.
+	* network.h (SHUT_RD, SHUT_WR, SHUT_RDWR): Define for Windows.
+
 2007-01-23  Akim Demaille  <akim@lrde.epita.fr>
 
 	Comments removal
